--- a/client/index.html
+++ b/client/index.html
@@ -3,19 +3,13 @@
   <head>
     <title></title>
     <script src="https://js.stripe.com/v3/"></script>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="styles.css">
-<style>
-  select{display: block;}
-</style>
-
   </head>
 
   <body>
-    <form action="/create-checkout-session" method="POST" onchange="calculateTotal()">
+    <form action="/create-checkout-session" method="POST" onchange="calculateTotal()" class="">
       <div class="cakesWrapper" id="cakesWrapper">
         <select
-          class="w3-select w3-margin"
+          class=""
           id="cakeSize"
           name="cakeSize"
           required
@@ -27,7 +21,7 @@
           <option value="12">12" Cake</option>
         </select>
 
-        <div class="w3-margin-left" id="cakeShape">
+        <div class="-left" id="cakeShape">
           <div>
             <label for="round">Round Cake</label>
             <input
@@ -35,7 +29,7 @@
               name="selectedcake"
               value="round"
               id="round"
-              class="w3-radio w3-margin-right"
+              class=""
               required
             />
             
@@ -47,7 +41,7 @@
               name="selectedcake"
               value="square"
               id="square"
-              class="w3-radio w3-margin-right"
+              class=""
               required
             />
             
@@ -55,7 +49,7 @@
         </div>
 
         <select
-          class="w3-select w3-margin"
+          class=""
           id="sponge"
           onchange="hideShowOtherSpongeTextArea()"
           name="sponge"
@@ -75,13 +69,13 @@
           rows="1"
           cols="80"
           id="spongeTextArea"
-          class="w3-input w3-margin"
+          class=""
           maxlength="40"
         >
         </textarea>
 
         <select
-          class="w3-select w3-margin-left w3-margin-right"
+          class=""
           name="butterCream"
           id="butterCream"
           required
@@ -94,11 +88,11 @@
           <option value="lemonCurd">Lemon Curd</option>
         </select>
 
-        <div class="w3-margin" id="checkBoxes">
+        <div class="" id="checkBoxes">
           <div>
             <input
               id="icing"
-              class="w3-check w3-margin-right"
+              class=""
               type="checkbox"
             />
             <label for="icing">Icing</label>
@@ -107,7 +101,7 @@
           <div id="Decoration">
             <input
               id="custom"
-              class="w3-check w3-margin-right"
+              class=""
               type="checkbox"
               onclick="hideShowDecTextArea()"
             />
@@ -118,7 +112,7 @@
               rows="3"
               cols="80"
               id="decTextArea"
-              class="w3-input w3-margin"
+              class=""
               maxlength="150"
             ></textarea>
           </div>
@@ -126,7 +120,7 @@
           <div id="cakeMessagediv">
             <input
               id="cakeMessage"
-              class="w3-check w3-margin-right"
+              class=""
               type="checkbox"
               onclick="hideShowCakeMessageTextArea()"
             />
@@ -137,7 +131,7 @@
               rows="1"
               cols="80"
               id="cakeMessageTextArea"
-              class="w3-input w3-margin"
+              class=""
               maxlength="32"
             ></textarea>
           </div>
@@ -157,7 +151,7 @@
         <p>Date required:</p>
 
         <input
-          class="w3-input w3-padding-16 w3-margin"
+          class=""
           name="datetime"
           type="date"
           id="dateAndTimeReq"
@@ -166,13 +160,13 @@
 
         <!-- Delivery/Collection -->
 
-        <div class="w3-margin-left">
+        <div class="-left">
           <label for="delivery">Delivery</label>
           <input
             type="radio"
             name="delcol"
             id="delivery"
-            class="w3-radio w3-margin-right"
+            class=""
             onclick="getdelorcol()"
           />
           <label for="collection">Collection</label>
@@ -180,7 +174,7 @@
             type="radio"
             name="delcol"
             id="collection"
-            class="w3-radio w3-margin-right"
+            class=""
             onclick="getdelorcol()"
           />
         </div>
@@ -188,7 +182,7 @@
         <p>Price</p>
         <p id="price"></p>
 
-        <div id="buttonContainer" class="w3-display-container">
+        <div id="buttonContainer" class="">
           <button type="submit">Checkout</button>
         </div>
       </div>
