--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <form action="/create-checkout-session" method="POST" onchange="calculateTotal()" class="">
       <div class="cakesWrapper" id="cakesWrapper">
         <select
-          class=""
+          class="form-control"
           id="cakeSize"
           name="cakeSize"
           required
