total css reset

--- a/client/index.html
+++ b/client/index.html
@@ -1,143 +1,79 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title></title>
-    <script src="https://js.stripe.com/v3/"></script>
-  </head>
 
-  <body>
-    <form action="/create-checkout-session" method="POST" onchange="calculateTotal()" class="">
-      <div class="cakesWrapper" id="cakesWrapper">
-        <select
-          class="form-control"
-          id="cakeSize"
-          name="cakeSize"
-          required
-        >
-          <option value="">Select Size</option>
-          <option value="6">6" Cake</option>
-          <option value="8">8" Cake</option>
-          <option value="10">10" Cake</option>
-          <option value="12">12" Cake</option>
-        </select>
+<head>
+  <title></title>
+  <script src="https://js.stripe.com/v3/"></script>
+</head>
 
-        <div class="-left" id="cakeShape">
-          <div>
-            <label for="round">Round Cake</label>
-            <input
-              type="radio"
-              name="selectedcake"
-              value="round"
-              id="round"
-              class=""
-              required
-            />
-            
-          </div>
-          <div>
-            <label for="square">Square Cake</label>
-            <input
-              type="radio"
-              name="selectedcake"
-              value="square"
-              id="square"
-              class=""
-              required
-            />
-            
-          </div>
+<body>
+  <form action="/create-checkout-session" method="POST" onchange="calculateTotal()" class="">
+    <div class="cakesWrapper" id="cakesWrapper">
+      <select class="" id="cakeSize" name="cakeSize" required>
+        <option value="">Select Size</option>
+        <option value="6">6" Cake</option>
+        <option value="8">8" Cake</option>
+        <option value="10">10" Cake</option>
+        <option value="12">12" Cake</option>
+      </select>
+
+      <div class="-left" id="cakeShape">
+        <div>
+          <label for="round">Round Cake</label>
+          <input type="radio" name="selectedcake" value="round" id="round" class="" required />
+
         </div>
+        <div>
+          <label for="square">Square Cake</label>
+          <input type="radio" name="selectedcake" value="square" id="square" class="" required />
 
-        <select
-          class=""
-          id="sponge"
-          onchange="hideShowOtherSpongeTextArea()"
-          name="sponge"
-          required
-        >
-          <option value="">Select Sponge</option>
-          <option value="plain">Plain</option>
-          <option value="lemon">Lemon</option>
-          <option value="chocolate">Chocolate</option>
-          <option value="carrotCake">Carrot Cake</option>
-          <option value="otherSpongeFlavour">Other Flavour</option>
-        </select>
+        </div>
+      </div>
 
-        <textarea
-          name="specifySpongeFlavour"
-          placeholder="Specify Sponge flavour.."
-          rows="1"
-          cols="80"
-          id="spongeTextArea"
-          class=""
-          maxlength="40"
-        >
+      <select class="" id="sponge" onchange="hideShowOtherSpongeTextArea()" name="sponge" required>
+        <option value="">Select Sponge</option>
+        <option value="plain">Plain</option>
+        <option value="lemon">Lemon</option>
+        <option value="chocolate">Chocolate</option>
+        <option value="carrotCake">Carrot Cake</option>
+        <option value="otherSpongeFlavour">Other Flavour</option>
+      </select>
+
+      <textarea name="specifySpongeFlavour" placeholder="Specify Sponge flavour.." rows="1" cols="80"
+        id="spongeTextArea" class="" maxlength="40">
         </textarea>
 
-        <select
-          class=""
-          name="butterCream"
-          id="butterCream"
-          required
-        >
-          <option value="">Select Butter Cream</option>
-          <option value="vanilla">Vanilla</option>
-          <option value="chocolate">Chocolate</option>
-          <option value="vanillaCreamCheese">Vanilla Cream Cheese</option>
-          <option value="lemon">Lemon</option>
-          <option value="lemonCurd">Lemon Curd</option>
-        </select>
+      <select class="" name="butterCream" id="butterCream" required>
+        <option value="">Select Butter Cream</option>
+        <option value="vanilla">Vanilla</option>
+        <option value="chocolate">Chocolate</option>
+        <option value="vanillaCreamCheese">Vanilla Cream Cheese</option>
+        <option value="lemon">Lemon</option>
+        <option value="lemonCurd">Lemon Curd</option>
+      </select>
 
-        <div class="" id="checkBoxes">
-          <div>
-            <input
-              id="icing"
-              class=""
-              type="checkbox"
-            />
-            <label for="icing">Icing</label>
-          </div>
-
-          <div id="Decoration">
-            <input
-              id="custom"
-              class=""
-              type="checkbox"
-              onclick="hideShowDecTextArea()"
-            />
-            <label for="custom">Decoration</label>
-            <textarea
-              name="decorationText"
-              placeholder="Enter decoration requests.."
-              rows="3"
-              cols="80"
-              id="decTextArea"
-              class=""
-              maxlength="150"
-            ></textarea>
-          </div>
-
-          <div id="cakeMessagediv">
-            <input
-              id="cakeMessage"
-              class=""
-              type="checkbox"
-              onclick="hideShowCakeMessageTextArea()"
-            />
-            <label for="cakeMessage">Message</label>
-            <textarea
-              name="cakeMessageTextArea"
-              placeholder="Enter cake message.."
-              rows="1"
-              cols="80"
-              id="cakeMessageTextArea"
-              class=""
-              maxlength="32"
-            ></textarea>
-          </div>
+      <div class="" id="checkBoxes">
+        <div>
+          <input id="icing" class="" type="checkbox" />
+          <label for="icing">Icing</label>
         </div>
 
-        <!-- <div class="refPhoto">
+        <div id="Decoration">
+          <input id="custom" class="" type="checkbox" onclick="hideShowDecTextArea()" />
+          <label for="custom">Decoration</label>
+          <textarea name="decorationText" placeholder="Enter decoration requests.." rows="3" cols="80" id="decTextArea"
+            class="" maxlength="150"></textarea>
+        </div>
+
+        <div id="cakeMessagediv">
+          <input id="cakeMessage" class="" type="checkbox" onclick="hideShowCakeMessageTextArea()" />
+          <label for="cakeMessage">Message</label>
+          <textarea name="cakeMessageTextArea" placeholder="Enter cake message.." rows="1" cols="80"
+            id="cakeMessageTextArea" class="" maxlength="32"></textarea>
+        </div>
+      </div>
+
+      <!-- <div class="refPhoto">
           <label for="filecakes" id="filecakesLab">Reference photo: </label>
           <input
             type="file"
@@ -148,45 +84,28 @@
           />
         </div> -->
 
-        <p>Date required:</p>
+      <p>Date required:</p>
 
-        <input
-          class=""
-          name="datetime"
-          type="date"
-          id="dateAndTimeReq"
-          required
-        />
+      <input class="" name="datetime" type="date" id="dateAndTimeReq" required />
 
-        <!-- Delivery/Collection -->
+      <!-- Delivery/Collection -->
 
-        <div class="-left">
-          <label for="delivery">Delivery</label>
-          <input
-            type="radio"
-            name="delcol"
-            id="delivery"
-            class=""
-            onclick="getdelorcol()"
-          />
-          <label for="collection">Collection</label>
-          <input
-            type="radio"
-            name="delcol"
-            id="collection"
-            class=""
-            onclick="getdelorcol()"
-          />
-        </div>
-
-        <p>Price</p>
-        <p id="price"></p>
-
-        <div id="buttonContainer" class="">
-          <button type="submit">Checkout</button>
-        </div>
+      <div class="">
+        <label for="delivery">Delivery</label>
+        <input type="radio" name="delcol" id="delivery" class="" onclick="getdelorcol()" />
+        <label for="collection">Collection</label>
+        <input type="radio" name="delcol" id="collection" class="" onclick="getdelorcol()" />
       </div>
-    </form>
-    <script src="./js/calc.js"></script>
-  </body>
+
+      <p>Price</p>
+      <p id="price"></p>
+
+      <div id="buttonContainer" class="">
+        <button type="submit">Checkout</button>
+      </div>
+    </div>
+  </form>
+  <script src="./js/calc.js"></script>
+</body>
+
 </html>
