--- a/client/index.html
+++ b/client/index.html
@@ -4,113 +4,119 @@
 <head>
   <title></title>
   <script src="https://js.stripe.com/v3/"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 
 <body>
 
   <div class="container px-5 my-5">
     <form id="cakeForm" action="/create-checkout-session" method="POST" onchange="calculateTotal()">
-        <div class="mb-3">
-            <label class="form-label" for="cakeSize">Cake Size</label>
-            <select class="form-select" id="cakeSize" aria-label="Cake Size">
-                <option value='6"'>6&quot;</option>
-                <option value='8"'>8&quot;</option>
-                <option value='10"'>10&quot;</option>
-                <option value='12"'>12&quot;</option>
-                <option value='14"'>14&quot;</option>
-            </select>
+      <div class="mb-3">
+        <label class="form-label" for="cakeSize">Cake Size</label>
+        <select class="form-select" id="cakeSize" aria-label="Cake Size">
+          <option value='6"'>6&quot;</option>
+          <option value='8"'>8&quot;</option>
+          <option value='10"'>10&quot;</option>
+          <option value='12"'>12&quot;</option>
+          <option value='14"'>14&quot;</option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <label class="form-label d-block">Cake Shape</label>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" id="round" type="radio" name="cakeShape" data-sb-validations="" />
+          <label class="form-check-label" for="round">Round</label>
         </div>
-        <div class="mb-3">
-            <label class="form-label d-block">Cake Shape</label>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" id="round" type="radio" name="cakeShape" data-sb-validations="" />
-                <label class="form-check-label" for="round">Round</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" id="square" type="radio" name="cakeShape" data-sb-validations="" />
-                <label class="form-check-label" for="square">Square</label>
-            </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" id="square" type="radio" name="cakeShape" data-sb-validations="" />
+          <label class="form-check-label" for="square">Square</label>
         </div>
-        <div class="mb-3">
-            <label class="form-label" for="cakeSponge">Cake Sponge</label>
-            <select class="form-select" id="cakeSponge" aria-label="Cake Sponge">
-                <option value="Plain">Plain</option>
-                <option value="Lemon">Lemon</option>
-                <option value="Chocolate">Chocolate</option>
-                <option value="Carrot Cake">Carrot Cake</option>
-                <option value="Other Flavour">Other Flavour</option>
-            </select>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="cakeSponge">Cake Sponge</label>
+        <select class="form-select" id="cakeSponge" aria-label="Cake Sponge">
+          <option value="Plain">Plain</option>
+          <option value="Lemon">Lemon</option>
+          <option value="Chocolate">Chocolate</option>
+          <option value="Carrot Cake">Carrot Cake</option>
+          <option value="Other Flavour">Other Flavour</option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="otherFlavour">Other flavour</label>
+        <input class="form-control" id="otherFlavour" type="text" placeholder="Other flavour"
+          data-sb-validations="required" />
+        <div class="invalid-feedback" data-sb-feedback="otherFlavour:required">Other flavour is required.</div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="buttercream">Buttercream</label>
+        <select class="form-select" id="buttercream" aria-label="Buttercream">
+          <option value="Vanilla">Vanilla</option>
+          <option value="Chocolate">Chocolate</option>
+          <option value="Vanilla Cream Cheese">Vanilla Cream Cheese</option>
+          <option value="Lemon">Lemon</option>
+          <option value="Lemon Curd">Lemon Curd</option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <div class="form-check form-switch">
+          <input class="form-check-input" id="icing" type="checkbox" name="icing" />
+          <label class="form-check-label" for="icing">Icing</label>
         </div>
-        <div class="mb-3">
-            <label class="form-label" for="otherFlavour">Other flavour</label>
-            <input class="form-control" id="otherFlavour" type="text" placeholder="Other flavour" data-sb-validations="required" />
-            <div class="invalid-feedback" data-sb-feedback="otherFlavour:required">Other flavour is required.</div>
+      </div>
+      <div class="mb-3">
+        <div class="form-check form-switch">
+          <input class="form-check-input" id="decoration" type="checkbox" name="decoration" />
+          <label class="form-check-label" for="decoration">Decoration</label>
         </div>
-        <div class="mb-3">
-            <label class="form-label" for="buttercream">Buttercream</label>
-            <select class="form-select" id="buttercream" aria-label="Buttercream">
-                <option value="Vanilla">Vanilla</option>
-                <option value="Chocolate">Chocolate</option>
-                <option value="Vanilla Cream Cheese">Vanilla Cream Cheese</option>
-                <option value="Lemon">Lemon</option>
-                <option value="Lemon Curd">Lemon Curd</option>
-            </select>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="decorationRequirements">Decoration Requirements</label>
+        <textarea class="form-control" id="decorationRequirements" type="text" placeholder="Decoration Requirements"
+          style="height: 10rem;" data-sb-validations="required"></textarea>
+        <div class="invalid-feedback" data-sb-feedback="decorationRequirements:required">Decoration Requirements is
+          required.</div>
+      </div>
+      <div class="mb-3">
+        <div class="form-check form-switch">
+          <input class="form-check-input" id="cakeMessage" type="checkbox" name="cakeMessage" />
+          <label class="form-check-label" for="cakeMessage">Cake Message</label>
         </div>
-        <div class="mb-3">
-            <div class="form-check form-switch">
-                <input class="form-check-input" id="icing" type="checkbox" name="icing" />
-                <label class="form-check-label" for="icing">Icing</label>
-            </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="specifyCakeMessage">Specify Cake Message</label>
+        <input class="form-control" id="specifyCakeMessage" type="text" placeholder="Specify Cake Message"
+          data-sb-validations="required" />
+        <div class="invalid-feedback" data-sb-feedback="specifyCakeMessage:required">Specify Cake Message is required.
         </div>
-        <div class="mb-3">
-            <div class="form-check form-switch">
-                <input class="form-check-input" id="decoration" type="checkbox" name="decoration" />
-                <label class="form-check-label" for="decoration">Decoration</label>
-            </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label d-block">Delivery / Collection</label>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" id="delivery" type="radio" name="deliveryCollection" data-sb-validations="" />
+          <label class="form-check-label" for="delivery">Delivery</label>
         </div>
-        <div class="mb-3">
-            <label class="form-label" for="describeYourRequirements">Describe your requirements</label>
-            <textarea class="form-control" id="describeYourRequirements" type="text" placeholder="Describe your requirements" style="height: 10rem;" data-sb-validations="required"></textarea>
-            <div class="invalid-feedback" data-sb-feedback="describeYourRequirements:required">Describe your requirements is required.</div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" id="collection" type="radio" name="deliveryCollection"
+            data-sb-validations="" />
+          <label class="form-check-label" for="collection">Collection</label>
         </div>
-        <div class="mb-3">
-            <div class="form-check form-switch">
-                <input class="form-check-input" id="cakeMessage" type="checkbox" name="cakeMessage" />
-                <label class="form-check-label" for="cakeMessage">Cake Message</label>
-            </div>
-        </div>
-        <div class="mb-3">
-            <label class="form-label" for="specifyCakeMessage">Specify Cake Message</label>
-            <input class="form-control" id="specifyCakeMessage" type="text" placeholder="Specify Cake Message" data-sb-validations="required" />
-            <div class="invalid-feedback" data-sb-feedback="specifyCakeMessage:required">Specify Cake Message is required.</div>
-        </div>
-        <div class="mb-3">
-            <label class="form-label d-block">Delivery / Collection</label>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" id="delivery" type="radio" name="deliveryCollection" data-sb-validations="" />
-                <label class="form-check-label" for="delivery">Delivery</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" id="collection" type="radio" name="deliveryCollection" data-sb-validations="" />
-                <label class="form-check-label" for="collection">Collection</label>
-            </div>
+      </div>
 
-            <input class="" name="datetime" type="date" id="dateAndTimeReq" required />
+      <input class="" name="datetime" type="date" id="dateAndTimeReq" required />
 
-        <div class="d-grid">
-            <button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button>
-        </div>
+
+      <div class="d-grid">
+        <button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button>
+      </div>
     </form>
-</div>
+  </div>
 
+  <!--refPhoto-->
 
-      <!--refPhoto-->
-      
-
-      
-
-      <p>Price</p>
-      <p id="price"></p>
+  <p>Price</p>
+  <p id="price"></p>
 
   <script src="./js/calc.js"></script>
 </body>
