added margins and form control

--- a/client/index.html
+++ b/client/index.html
@@ -104,19 +104,25 @@
         </div>
       </div>
 
-      <input class="" name="datetime" type="date" id="dateAndTimeReq" required />
+      <input class="form-control" name="datetime" type="date" id="dateAndTimeReq" required />
 
 
-      <div class="d-grid">
+      <div class="d-grid mt-3">
         <button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button>
       </div>
+
+      <div>
+        Price
+        <div id="price"></div>
+      </div>
+
+
     </form>
   </div>
 
   <!--refPhoto-->
 
-  <p>Price</p>
-  <p id="price"></p>
+
 
   <script src="./js/calc.js"></script>
 </body>
