updating cake shape values and formating js

--- a/client/index.html
+++ b/client/index.html
@@ -15,11 +15,11 @@
       <div class="mb-3">
         <label class="form-label" for="cakeSize">Cake Size</label>
         <select class="form-select" id="cakeSize" aria-label="Cake Size">
-          <option value='6"'>6&quot;</option>
-          <option value='8"'>8&quot;</option>
-          <option value='10"'>10&quot;</option>
-          <option value='12"'>12&quot;</option>
-          <option value='14"'>14&quot;</option>
+          <option value="6">6&quot;</option>
+          <option value="8">8&quot;</option>
+          <option value="10">10&quot;</option>
+          <option value="12">12&quot;</option>
+          <option value="14">14&quot;</option>
         </select>
       </div>
       <div class="mb-3">
