--- a/client/index.html
+++ b/client/index.html
@@ -25,22 +25,22 @@
       <div class="mb-3">
         <label class="form-label d-block">Cake Shape</label>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" id="round" type="radio" name="cakeShape" data-sb-validations="" />
+          <input class="form-check-input" value="round" type="radio" data-sb-validations="" name="cakeShape" />
           <label class="form-check-label" for="round">Round</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" id="square" type="radio" name="cakeShape" data-sb-validations="" />
+          <input class="form-check-input" value="square" type="radio" data-sb-validations="" name="cakeShape" />
           <label class="form-check-label" for="square">Square</label>
         </div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="cakeSponge">Cake Sponge</label>
-        <select class="form-select" id="cakeSponge" aria-label="Cake Sponge">
-          <option value="Plain">Plain</option>
-          <option value="Lemon">Lemon</option>
-          <option value="Chocolate">Chocolate</option>
-          <option value="Carrot Cake">Carrot Cake</option>
-          <option value="Other Flavour">Other Flavour</option>
+        <select class="form-select" id="sponge" aria-label="Cake Sponge">
+          <option value="plain">Plain</option>
+          <option value="lemon">Lemon</option>
+          <option value="chocolate">Chocolate</option>
+          <option value="carrotCake">Carrot Cake</option>
+          <option value="otherSpongeFlavour">Other Flavour</option>
         </select>
       </div>
       <div class="mb-3">
