adding styles for removing the other flavour section of the form

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 
+<style>#cakeForm > div:nth-child(4) {display: none;}</style>
+
 <body>
 
   <div class="container px-5 my-5">
@@ -52,11 +54,11 @@
       <div class="mb-3">
         <label class="form-label" for="buttercream">Buttercream</label>
         <select class="form-select" id="buttercream" aria-label="Buttercream">
-          <option value="Vanilla">Vanilla</option>
-          <option value="Chocolate">Chocolate</option>
-          <option value="Vanilla Cream Cheese">Vanilla Cream Cheese</option>
-          <option value="Lemon">Lemon</option>
-          <option value="Lemon Curd">Lemon Curd</option>
+          <option value="vanilla">Vanilla</option>
+          <option value="chocolate">Chocolate</option>
+          <option value="vanillaCreamCheese">Vanilla Cream Cheese</option>
+          <option value="lemon">Lemon</option>
+          <option value="lemonCurd">Lemon Curd</option>
         </select>
       </div>
       <div class="mb-3">
@@ -125,6 +127,7 @@
 
 
   <script src="./js/calc.js"></script>
+  <script src="./js/visual.js"></script>
 </body>
 
 </html>
