pretty much working form again

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 
-<style>#cakeForm > div:nth-child(4) {display: none;}</style>
+<style>#cakeForm > div:nth-child(4), #cakeForm > div:nth-child(8), #cakeForm > div:nth-child(10) {display: none;}</style>
 
 <body>
 
@@ -69,7 +69,7 @@
       </div>
       <div class="mb-3">
         <div class="form-check form-switch">
-          <input class="form-check-input" id="decoration" type="checkbox" name="decoration" />
+          <input class="form-check-input" id="dec" type="checkbox" name="decoration" />
           <label class="form-check-label" for="decoration">Decoration</label>
         </div>
       </div>
